Complete profile page withour image upload

--- a/BloodConnector.WebAPI/Content/Site.css
+++ b/BloodConnector.WebAPI/Content/Site.css
@@ -505,7 +505,7 @@ div.user-menu div.user-menu-content:not(.active){
 /*End : Profile image*/
 
 .red-alert {
-    color: #ff0000;
+    color: #d00;
     font-weight: bold;
 }
 
