--- a/BloodConnector.WebAPI/app/views/login.html
+++ b/BloodConnector.WebAPI/app/views/login.html
@@ -23,6 +23,7 @@
                 <input type="password" id="password" name="password" class="form-control input-lg"
                        tabindex="0"
                        placeholder="Password"
+                       my-enter="vm.login()"
                        data-ng-model="vm.loginData.password"/>
             </div>
             <div class="form-group">
