--- a/BloodConnector.WebAPI/Content/Site.css
+++ b/BloodConnector.WebAPI/Content/Site.css
@@ -471,6 +471,7 @@ div.user-menu div.user-menu-content:not(.active){
     position: absolute!important;
     width: 100%;
     height: 75px;
+    line-height: 75px;
     bottom: 0!important;
     left: 0;
     z-index: 999!important;
@@ -484,6 +485,20 @@ div.user-menu div.user-menu-content:not(.active){
     font-size: 13px;
     background: #000;
     font-weight: bold;
+    margin-bottom: 0;
+}
+
+.profile-image:focus, .profile-image-button :focus {
+    outline: none;
+}
+
+input[type='file'] {
+	width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+	z-index: -1;
 }
 
 .table-user-information > tbody > tr {
