--- a/BloodConnector.WebAPI/app/views/profile.html
+++ b/BloodConnector.WebAPI/app/views/profile.html
@@ -3,7 +3,11 @@
         <form class="form-profile" role="form" novalidate ng-submit="profileForm.$valid && vm.update()" enctype="multipart/form-data" name="profileForm">
             <div class="panel panel-default">
             <div class="panel-heading clearfix">
-                <div class="panel-title" ng-bind="vm.profile.fullName"></div>
+                <div class="panel-title">
+                    <span ng-bind="vm.profile.firstName"></span>
+                    <span ng-bind="vm.profile.lastName"></span>
+                    <span>({{vm.profile.nikeName}})</span>
+                </div>
                 <div ng-class="{'invisible':profileForm.$valid}">
                     &nbsp;<span ng-if="vm.editMode" class="red-alert">Please fillup the required fields.</span>
                 </div>
@@ -15,23 +19,28 @@
             </div>
                 <div class="panel-body">
                     <div class="row">
-                        <div class="col-lg-3 col-md-3 col-sm-3" align="center" style="display: none;">
+                        <div class="col-lg-3 col-md-3 col-sm-3" align="center">
                             <div class="profile-image" tabindex="0" aria-label="Profile image">
                                 <div class="profile-image-button">
-                                    <button class="upload-img" type="button">
+                                    <input type="file" ng-model="vm.profile.attachments" accept="image/*" id="profileImage" name="profileImage"/>
+                                    <label class="upload-img" for="profileImage">
                                         <i class="fa fa-camera" aria-hidden="true"></i>
                                         <span>Add</span>
-                                    </button>
+                                    </label>
                                 </div>
                             </div>
-                            <img class="img-circle img-responsive">
+                            <!--<img src="../../Images/noimage.jpg" class="img-circle img-responsive">-->
                         </div>
-                        <div class="col-lg-12 col-md-12 col-sm-12">
+                        <div class="col-lg-9 col-md-9 col-sm-9">
                             <table class="table table-user-information mb0">
                                 <tbody>
                                     <tr>
                                         <td class="h4">Name</td>
-                                        <td ng-if="!vm.editMode" ng-bind="vm.profile.fullName"></td>
+                                        <td ng-if="!vm.editMode">
+                                            <span ng-bind="vm.profile.firstName"></span>
+                                            <span ng-bind="vm.profile.lastName"></span>
+                                            <span ng-show="vm.profile.nikeName">({{vm.profile.nikeName}})</span>
+                                        </td>
                                         <td ng-if="vm.editMode">
                                             <div class="row">
                                                 <div class="col-xs-12 col-sm-6 col-md-6">
