--- a/BloodConnector.WebAPI/app/views/profile.html
+++ b/BloodConnector.WebAPI/app/views/profile.html
@@ -20,10 +20,10 @@
                 <div class="panel-body">
                     <div class="row">
                     <div class="col-lg-3 col-md-3 col-sm-3" align="center">
-                        <img ngf-src="vm.profile.avatar" class="img-circle img-responsive"/>
-                        <img ng-if="!vm.profile.avatar" src="../../Images/noimage.jpg" alt="Profile picture" class="img-circle img-responsive"/>
+                        <img ngf-src="vm.attachment.avatar" class="img-circle img-responsive"/>
+                        <img ng-if="!vm.attachment.avatar" src="../../Images/noimage.jpg" alt="Profile picture" class="img-circle img-responsive"/>
                         <button ng-if="vm.editMode" class="btn btn-primary text-wrap mt10" type="button" onclick="document.getElementById('profileImage').click();">Select Your Profile Picture</button>
-                        <input type="file" id="profileImage" name="profileImage" ng-model="vm.profile.avatar" ngf-select accept="image/*"/>
+                        <input type="file" id="profileImage" name="profileImage" ng-model="vm.attachment.avatar" ngf-select accept="image/*"/>
                    </div>
                     <div class="col-lg-9 col-md-9 col-sm-9">
                         <table class="table table-user-information mb0">
