Dynamic profile part-1

--- a/BloodConnector.WebAPI/app/views/users.html
+++ b/BloodConnector.WebAPI/app/views/users.html
@@ -33,7 +33,7 @@
                         <td ng-bind="item.name"></td>
                         <td ng-bind="item.email"></td>
                         <td ng-bind="item.contactNumber"></td>
-                        <td>
+                        <td style="width: 200px;">
                             <span ng-bind="item.address"></span>
                             <span ng-if="item.city || item.address">
                                 <br />
