Added help page

--- a/BloodConnector.WebAPI/Views/Shared/_Layout.cshtml
+++ b/BloodConnector.WebAPI/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                         <li data-ng-hide="!vm.authentication.isAuth"><a data-toggle="collapse" data-target=".navbar-collapse.in" ng-class="{'selected-menu': vm.active.logout}" ng-click="vm.changeSelectedClass('logout'); vm.logOut()" href="javascript:void(0);">LogOut</a></li>
                         <li data-ng-hide="vm.authentication.isAuth"><a data-toggle="collapse" data-target=".navbar-collapse.in" ng-class="{'selected-menu': vm.active.login}" ng-click="vm.changeSelectedClass('login')" href="#!login">LogIn</a></li>
                         <li data-ng-hide="vm.authentication.isAuth"><a data-toggle="collapse" data-target=".navbar-collapse.in" ng-class="{'selected-menu': vm.active.signup}" ng-click="vm.changeSelectedClass('signup')" href="#!signup">Join Us</a></li>
-                        <li><a data-toggle="collapse" data-target=".navbar-collapse.in" ng-class="{'selected-menu': vm.active.about}" ng-click="vm.changeSelectedClass('about')" href="#!about">About</a></li>
+                        <li><a data-toggle="collapse" data-target=".navbar-collapse.in" ng-class="{'selected-menu': vm.active.about}" ng-click="vm.changeSelectedClass('about')" href="#!help">Help</a></li>
                     </ul>
                 </div>
             </div>
