--- a/BloodConnector.WebAPI/app/views/about.html
+++ b/BloodConnector.WebAPI/app/views/about.html
@@ -10,7 +10,7 @@
         <div class="col-md-12">
             <h3>Blood collection help:</h3>
             <div>If you want to collect blood, create an account here and try to reach out the appropriate donor.
-                Feel free to contact with <b>Mafi Islam</b> and <b>Jahangir Hossain</b> if you can't reach appropriate donor.
+                If you can't reach appropriate donor, feel free to contact with <b>Mafi Islam</b> and <b>Jahangir Hossain</b>.
             </div>
         </div>
     </div>
