--- a/BloodConnector.WebAPI/Views/Shared/_Layout.cshtml
+++ b/BloodConnector.WebAPI/Views/Shared/_Layout.cshtml
@@ -78,9 +78,10 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-6 col-md-6 col-xs-6 col-sm-6 text-left">
-                <a href="https://www.facebook.com/bloodconnector" target="_blank"><i class="fa fa-facebook"></i></a>
-                <a href="javascript:void(0);" target="_blank"><i class="fa fa-twitter"></i></a>
-                <a href="javascript:void(0);" target="_blank"><i class="fa fa-youtube"></i></a>
+                <a href="https://www.facebook.com/bloodconnector" title="Facebook Page" target="_blank"><span class="blue"><i class="fa fa-facebook"></i></span></a>
+                <a href="https://play.google.com/store/apps/details?id=com.bloodconnector" target="_blank" title="Android App on google play store"><span class="text-android"><i class="fa fa-android" aria-hidden="true"></i></span></a>
+                @*<a href="javascript:void(0);" target="_blank"><i class="fa fa-twitter"></i></a>
+                <a href="javascript:void(0);" target="_blank"><i class="fa fa-youtube"></i></a>*@
             </div>
             <div class="col-lg-6 col-md-6 col-xs-6 col-sm-6 text-right">
                 <span>&copy; @DateTime.Now.Year - BloodConnector&nbsp;@version</span>
