--- a/BloodConnector.WebAPI/app/views/policy.html
+++ b/BloodConnector.WebAPI/app/views/policy.html
@@ -5,8 +5,8 @@
 	<meta charset="utf-8" />
 </head>
 <body>
-    <div style="margin-top: 200px; text-align: center">
-        All the registered user can see your <span style="font-weight: bold">Contact Number</span> and <span style="font-weight: bold">E-mail</span>. So they can call you or send email for blood.
+    <div style="margin-top: 200px; text-align: center; font-size: 2em">
+        After you register with this app. All the registered user can see your <span style="font-weight: bold">Contact Number</span> and <span style="font-weight: bold">E-mail</span>. So they can call you or send email for blood.
     </div>
 </body>
 </html>
